# open-rag-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  chroma.sqlite3  cli.py  generate_embeddings.py  main.py  process_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: generate_embeddings.py  process_data.py
src/: cli.py  exceptions.py  main.py  requirements.txt
src/app/: main.py
src/config/: .env.example  settings.py
src/core/: loader.py  logging_config.py  prompt.py  retriever.py
src/core/chat_bot/: __init__.py  chat_bot.py
src/core/retriever/: __init__.py  retriever.py
src/data/: data_processing.py  docx.py  embeddings.py  load.py  pdf.py  utils.py
src/open_rag_bot/: exceptions.py
src/open_rag_bot/app/: main.py  utils.py
src/open_rag_bot/config/: .env.example  settings.py
src/open_rag_bot/core/: loader.py  logging_config.py
src/open_rag_bot/core/chat_bot/: __init__.py  chat_bot.py
src/open_rag_bot/core/retriever/: __init__.py  retriever.py
src/open_rag_bot/data/: embeddings.py  load.py  pdf.py  save.py  txt.py  utils.py
src/open_rag_bot/services/: __init__.py
src/open_rag_bot/services/embedding/: embedding_client.py  groq_embedding_client.py  openai_embedding_client.py
src/open_rag_bot/services/llm/: groq_client.py  openai_client.py
src/services/: __init__.py
src/services/embedding/: embedding_client.py  groq_embedding_client.py  openai_embedding_client.py
src/services/llm/: groq_client.py  llm_client.py  openai_client.py
tests/core/: test_chroma.py
tests/data/: test_data_processing.py  test_docx_processing.py  test_embeddings.py  test_pdf_processing.py  test_txt_processing.py
tests/services/: test_groq_client.py  test_openai_client.py  test_services_factories.py
