[project]
name = "open-rag-chatbot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nicola Marcantognini", email = "nicola.marcantognini@outlook.com"},
]
dependencies = [
    "streamlit>=1.46.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "chromadb>=0.4.24",
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "PyMuPDF>=1.26.3",
    "pdfminer-six>=20250506",
    "tqdm>=4.67.1",
    "pikepdf>=9.9.0",
    "groq>=0.29.0",
    "openai>=1.93.2",
    "typer>=0.16.0",
    "python-docx>=1.2.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.build]
package-dir = "src"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
fix = true
exclude = [
  "build/",
  "migrations/",
]

[tool.ruff.lint]
select = [
  "E",      # Errori PEP8 base
  "F",      # Errori di flake8
  "B",      # Bugbear: errori comuni di coding
  "I",      # Import sorting
  "C90",    # Complexity: McCabe
  "T",      # Type annotations
  "N",      # Naming style
  "S",      # Sicurezza (bandit)
  "D",      # Docstring
  "UP",     # Aggiornamenti Python moderni
  "A",      # Built-in shadowing
  "ASYNC",  # Errori async
  "TRY",    # Try/Except errori
  "SIM",    # Semplicità, semplificazione
  "PT",     # Pytest best practices
]
ignore = [
  "D100",   # TODO: Add docstring to modules
  "D101",   # TODO: Add docstring to public classes
  "D102",   # TODO: Add docstring to public methods
  "D103",   # TODO: Add docstring to public functions
  "D104",   # TODO: Add docstring to packages
  "D107",   # TODO: Add docstring to __init__
  "D203",   # Prefer D211 (NO blank line before class)
  "D213",   # Prefer D212 (multi-line summary on first line)
  "S101",   # Idiomatic use of pytest assert
]



[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.2",
]
