[project]
name = "open_rag_bot"
version = "0.1.0"
description = "Modular Retrieval-Augmented Generation (RAG) chatbot"
authors = [
    {name = "Whitris", email = "nicola.marcantognini@outlook.com"},
]
dependencies = ["streamlit>=1.46.1", "python-dotenv>=1.1.1", "chromadb>=1.0.15", "pandas>=2.3.1", "tqdm>=4.67.1", "pikepdf>=9.10.0", "PyMuPDF>=1.26.3", "openai>=1.95.1", "pdfminer-six>=20250506", "python-docx>=1.2.0", "pydantic-settings>=2.10.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.3",
    "pre-commit>=4.2.0",
]
